syntax = "proto3";

package pb;

option go_package = "pb/";

service TemperatureService {
  rpc RecordTemperatura(stream TemperatureRequest) returns (TemperatureResponse) {}
}

message TemperatureRequest {
  float temperature = 1;
}

message TemperatureResponse {
  float average_temperature = 2;
}
